--- a/web.config
+++ b/web.config
@@ -3,15 +3,36 @@
   <system.webServer>
     <!-- IIS Node.js handler -->
     <handlers>
-      <add name="iisnode" path="index.js" verb="*" modules="iisnode" />
+      <add name="iisnode" path="dist/index.js" verb="*" modules="iisnode" />
     </handlers>
+    
+    <!-- Environment variables -->
+    <iisnode
+      nodeProcessCommandLine="node"
+      debuggingEnabled="true"
+      logDirectory="iisnode"
+      watchedFiles="*.js;node_modules\*;routes\*.js;views\*.jade"
+      uncFileChangesPollingInterval="5000"
+      gracefulShutdownTimeout="60000"
+      loggingEnabled="true"
+      logDirectory="iisnode"
+      maxLogFileSizeInKB="128"
+      maxTotalLogFileSizeInKB="1024"
+      maxLogFiles="20"
+      devErrorsEnabled="true"
+      flushResponse="false"
+      enableXFF="false"
+      promoteServerVars=""
+      configOverrides="iisnode.yml"
+      node_env="production"
+    />
     
     <!-- URL Rewrite rules -->
     <rewrite>
       <rules>
         <!-- Node.js debugging (optional) -->
         <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
-          <match url="^index.js\/debug[\/]?" />
+          <match url="^dist/index.js\/debug[\/]?" />
         </rule>
         
         <!-- Static content (if you have any) -->
@@ -24,7 +45,7 @@
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
           </conditions>
-          <action type="Rewrite" url="index.js"/>
+          <action type="Rewrite" url="dist/index.js"/>
         </rule>
       </rules>
     </rewrite>
