Adding IIS config to enable api in prod

--- a/web.config
+++ b/web.config
@@ -6,38 +6,22 @@
       <add name="iisnode" path="dist/index.js" verb="*" modules="iisnode" />
     </handlers>
     
-    <!-- Environment variables -->
+    <!-- IIS Node.js configuration -->
     <iisnode
       nodeProcessCommandLine="node"
       debuggingEnabled="true"
-      logDirectory="iisnode"
-      watchedFiles="*.js;node_modules\*;routes\*.js;views\*.jade"
-      uncFileChangesPollingInterval="5000"
-      gracefulShutdownTimeout="60000"
       loggingEnabled="true"
       logDirectory="iisnode"
-      maxLogFileSizeInKB="128"
-      maxTotalLogFileSizeInKB="1024"
-      maxLogFiles="20"
       devErrorsEnabled="true"
-      flushResponse="false"
-      enableXFF="false"
-      promoteServerVars=""
-      configOverrides="iisnode.yml"
       node_env="production"
     />
     
     <!-- URL Rewrite rules -->
     <rewrite>
       <rules>
-        <!-- Node.js debugging (optional) -->
+        <!-- All requests go to Node.js -->
         <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
           <match url="^dist/index.js\/debug[\/]?" />
-        </rule>
-        
-        <!-- Static content (if you have any) -->
-        <rule name="StaticContent">
-          <action type="Rewrite" url="public{REQUEST_URI}"/>
         </rule>
         
         <!-- All other requests go to Node.js -->
