web.config for Mochashost IIS

--- a/web.config
+++ b/web.config
@@ -1,49 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
-    <!-- IIS Node.js handler -->
+    <!-- Disable logging to avoid permission errors, but enable dev errors -->
+    <iisnode loggingEnabled="false" devErrorsEnabled="true" nodeProcessCommandLine="C:\Program Files\nodejs\node.exe"/>
+    <!-- Register iisnode handler -->
     <handlers>
-      <add name="iisnode" path="dist/index.js" verb="*" modules="iisnode" />
+      <add name="iisnode" path="*.js" verb="*" modules="iisnode"/>
     </handlers>
-    
-    <!-- IIS Node.js configuration -->
-    <iisnode
-      nodeProcessCommandLine="node"
-      debuggingEnabled="true"
-      loggingEnabled="true"
-      logDirectory="iisnode"
-      devErrorsEnabled="true"
-      node_env="production"
-    />
-    
-    <!-- URL Rewrite rules -->
+    <!-- Rewrite rule - all requests go to main app entry point -->
     <rewrite>
       <rules>
-        <!-- All requests go to Node.js -->
-        <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
-          <match url="^dist/index.js\/debug[\/]?" />
-        </rule>
-        
-        <!-- All other requests go to Node.js -->
-        <rule name="DynamicContent">
-          <conditions>
-            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
-          </conditions>
+        <rule name="MainApp">
           <action type="Rewrite" url="dist/index.js"/>
         </rule>
       </rules>
     </rewrite>
-    
-    <!-- Security settings -->
-    <security>
-      <requestFiltering>
-        <hiddenSegments>
-          <remove segment="bin"/>
-        </hiddenSegments>
-      </requestFiltering>
-    </security>
-    
-    <!-- Error handling -->
-    <httpErrors existingResponse="PassThrough" />
+    <tracing>
+      <traceFailedRequests>
+        <clear/>
+      </traceFailedRequests>
+    </tracing>
   </system.webServer>
-</configuration> 
+</configuration>
