code right up, renaming files and deleting unnecesary ones

--- a/package.json
+++ b/package.json
@@ -7,29 +7,15 @@
     "start": "node dist/index.js",
     "dev": "nodemon",
     "build": "tsc",
-    "build:minimal": "tsc src/scripts/test-minimal-ts.ts --outDir dist/scripts",
-    "test": "jest",
     "lint": "eslint src/**/*.{ts,tsx}",
-    "migrate": "ts-node src/scripts/runMigration.ts",
-    "migrate:all": "ts-node src/scripts/runAllMigrations.ts",
-    "migrate:init": "ts-node src/scripts/initDatabase.ts",
-    "migrate:status": "ts-node src/scripts/migrateStatus.ts",
-    "migrate:undo": "ts-node src/scripts/migrateUndo.ts",
-    "migrate:create": "ts-node src/scripts/createMigration.ts",
-    "test:db": "ts-node src/scripts/testDatabase.ts",
-    "test:basic": "ts-node src/scripts/testBasic.ts",
-    "test:ftp-config": "ts-node src/scripts/test-ftp-config.ts",
-    "test:minimal": "ts-node src/scripts/test-minimal-ts.ts",
-    "test:deployed": "ts-node src/scripts/test-minimal-deployed.ts",
-    "test:iis": "ts-node src/scripts/test-iis-environment.ts",
-    "test:dotenv": "ts-node src/scripts/test-dotenv-debug.ts",
-    "test:context": "ts-node src/scripts/test-iis-context.ts",
-    "deploy:ftp": "ts-node src/scripts/deploy-ftp.ts",
-    "build:deploy": "npm run build && npm run deploy:ftp",
-    "test:super-minimal": "ts-node src/scripts/test-super-minimal.ts",
-    "postinstall": "npm run build",
-    "railway:deploy": "npm run build && echo 'Railway deployment ready'",
-    "railway:prepare": "ts-node src/scripts/deploy-railway.ts"
+    "migrate": "ts-node src/scripts/run-migration.ts",
+    "migrate:all": "ts-node src/scripts/run-all-migrations.ts",
+    "migrate:init": "ts-node src/scripts/init-database.ts",
+    "migrate:status": "ts-node src/scripts/migrate-status.ts",
+    "migrate:undo": "ts-node src/scripts/migrate-undo.ts",
+    "migrate:create": "ts-node src/scripts/create-migration.ts",
+    "deploy:mochahost": "ts-node src/scripts/deploy-mochahost.ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
